# checkpoint-member-analyzer

./: .dir-locals.el  .env  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clang5.dockerfile  docker-compose.yml
.github/workflows/: dockerimage-clang-5.0-ubuntu.yml  dockerimage-clang-6.0-ubuntu.yml  dockerimage-clang-8-ubuntu.yml  dockerimage-clang-9-ubuntu.yml  dockerimage-vt-clang-5.0-ubuntu.yml
cmake-modules/: FindClang.cmake  FindLLVM.cmake
scripts/: apply-to-build.sh  license-template  parse-json.pl  transform.sh
src/: checker.cc  sanitizer.cc
src/plugin/: plugin.cc  plugin.h
src/runtime/: common.h  missing_info.h  preload.cc  preload.h  runtime_interface.h  sanitize_rt.cc  sanitize_rt.h  stack_record.h
src/sanitizer/: common.h  generator.cc  generator.h  member_list.h  qualified_name.h  sanitizer.cc  sanitizer.h  walk_record.cc  walk_record.h
tests/: CMakeLists.txt  test-common.h  test-enable-if.cc  test-inner-class.cc
workflows/: build_cpp.sh  test_cpp.sh  ubuntu-18.04-clang-cpp.dockerfile
